--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="form-group col-md-2">
                       <span class="input-group-btn">
-                          <button class="btn btn-default" type="button" ng-click="search(1)">
+                          <button class="btn btn-default" type="button" ng-click="search()">
                               <span class="glyphicon glyphicon-search"> Find</span>
                           </button>
                       </span>
@@ -93,73 +93,37 @@
         <div class="panel-heading">Results
             <p class="pull-right"> hits: {{ results.hits.total }}</p>
         </div>
-        <input type="checkbox" ng-model="checked"> pretty print?
         <div class="panel-body">
 		<table class="table table-striped table-condensed table-hover">
-			<thead><tr><th ng-repeat="header in freeform_results_ngTable.headers" class="{{header.name}}" custom-sort order="header.name" sort="sort">{{header.name}}</th></tr></thead>
+			<thead><tr><th ng-repeat="header in freeform_results_ngTable.headers" class="{{header.name}}" custom-sort order="header.name" sort="sort">
+			<a ng-click="sort_by(order)" style="color: #555;"><i ng-class="selectedCls(order)">{{header.name}}</i></a></th></tr></thead>
 			<tfoot>
-	                <td colspan="6">
-        	            <div class="pagination pull-right">
-	                        <ul>
+	                <td colspan="{{freeform_results_ngTable.headers.length}}">
+        	            <div >
+	                        <ul class="pagination">
                         	    <li ng-class="{disabled: currentPage == 0}">
-                	                <a href ng-click="prevPage()">« Prev</a>
+                	                <a href="/analyze#" ng-click="prevPage()">« Prev</a>
         	                    </li>
 	
-	                            <li ng-repeat="n in range(freeform_results_ngTable.pagedItems.length, currentPage, currentPage + gap) "
-                        	        ng-class="{active: n == currentPage}"
-                	            ng-click="setPage()">
-        	                        <a href ng-bind="n + 1">1</a>
+	                            <li ng-repeat="n in range(freeform_results_ngTable.pagedItems.length, 0, (results.hits.total / ff.maxSize -1 ), 1)"
+                        	        ng-class="{active: n == currentPage}" >
+        	                        <span ng-bind="n + 1">1</span>
 	                            </li>
 
 	                            <li ng-class="{disabled: (currentPage) == freeform_results_ngTable.pagedItems.length - 1}">
-        	                        <a href ng-click="nextPage()">Next »</a>
+        	                        <a href="/analyze#" ng-click="nextPage()">Next »</a>
 	                            </li>
                         	</ul>
                 	    </div>
 	                </td>
         	        </tfoot>
-			<pre>pagedItems.length: {{pagedItems.length|json}}</pre>
-	                <pre>currentPage: {{currentPage|json}}</pre>
-        	        <pre>currentPage: {{sort|json}}</pre>
 			<tbody>
-
 	                <tr ng-repeat="item in freeform_results_ngTable.pagedItems[currentPage] | orderBy:sort.sortingOrder:sort.reverse">
-        	             <td ng-repeat="val in item" ng-bind-html-unsafe="item[freeform_results_ngTable.headers[$index].name]"></td>
+        	             <!--<td ng-repeat="val in item" ng-bind-html-unsafe="item._source[freeform_results_ngTable.headers[$index].name]"></td>-->
+				<td ng-repeat="header in freeform_results_ngTable.headers">{{ item._source[header.name] | freeFormDisplayText  }}</td>
                 	</tr>
 		        </tbody>
 		</table>
-		<!--<table ng-table="freeform_results_ngTable" show-filter="true" class="table">
-	        <thead>
-        	<tr>
-	            <th ng-repeat="column in columns" ng-show="column.visible"
-	                class="text-center sortable" ng-class="{
-	                    'sort-asc': tableParams.isSortBy(column.field, 'asc'),
-	                    'sort-desc': tableParams.isSortBy(column.field, 'desc')
-	                  }"
-	                ng-click="tableParams.sorting(column.field, tableParams.isSortBy(column.field, 'asc') ? 'desc' : 'asc')">
-	                {{column.title}}
-	            </th>
-	        </tr>
-	        </thead>
-	        <tbody>
-	        <tr ng-repeat="user in $data">
-	            <td ng-repeat="column in columns" ng-show="column.visible" sortable="column.field">
-        	        {{user[column.field]}}
-	            </td>
-	        </tr>
-	        </tbody>
-	    </table>
-            <table class="table table-striped table-hover">
-                <tr ng-repeat="result in results.hits.hits" ng-class="rowClass(result)">
-                    <td ng-hide="checked">{{ result }}</td>
-                    <td ng-show="checked">
-                        <pre>{{ result | json }}</pre>
-                    </td>
-                </tr>
-            </table>
-		<div data-pagination="" data-num-pages="numPages()" 
-			  data-current-page="ff.currentPage" data-max-size="ff.maxSize"  
-			  data-boundary-links="true"></div>-->
         </div>
     </div>
 
