--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -59,9 +59,9 @@
                       </a>
                     </p><br>
                   </div>
-                  <div class="col-xs-12 col-lg-6 hidden">
+                  <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-twitter" href="{{getSignupUrl('/api/oauth/twitter')}}" target="_self">
+                      <a class="btn-lg btn-block btn-twitter" href="{{getSignupUrl('/api/oauth/twitter/signup')}}" target="_self">
                         <span class="fa fa-twitter"> Twitter</span>
                       </a>
                     </p><br>
