--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-2 text-center">
       <h4>
-        <img width="40" src="{{match.model.logo}}">
+        <img width="40" src="{{logoUrl(match.model)}}">
       </h4>
     </div>
 
