--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -13,7 +13,7 @@
       <ul class="dropdown-menu" role="menu">
         <li class="text-center" dropdown-toggle ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
         <li role="presentation"  class="divider"></li>
-        <li class="text-center" dropdown-toggle ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'">
+        <li class="" dropdown-toggle ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'">
           <a href>{{flow.name}}</a>
         </li>
       </ul>
