--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -8,7 +8,6 @@
   </h2>
 </md-toolbar>
 
-<br>
 
 <style type="text/css">
     .dashboard-panel {
@@ -22,79 +21,88 @@
     }
 </style>
 
-<div class="col-xs-12">
-    <div>
-        <message-grapher></message-grapher>
-    </div>
-    <div class="row">
-        <div class="col-sm-4 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Nodes</h3>
+<div flex layout-fill layout="row" layout-align="center">
+  <div flex="66" flex-tablet="95" flex-phone="95" class="md-whiteframe-z2">
+    <md-content>
+      <div flex layout="column">
+        <br>
+        <div class="col-xs-12">
+            <div>
+                <message-grapher></message-grapher>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!devices ? devices.length : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default><a href="" ui-sref="^.connector.devices.all">{{devices.length + channels.length}}</a>
-                            </div>
-                        </h1>
+            <div class="row">
+                <div class="col-sm-4 dashboard-panel">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Nodes</h3>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-4 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Message Types</h3>
-            </div>
-            <div class="panel panel-default">
-                <a href="" ui-sref="^.analyzer">
-                    <div class="panel-body">
-                        <div ng-switch="!!messages ? 1 : 0">
-                            <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                            <div ng-switch-default>
-                                <div nvd3-pie-chart data="messages.types" height="300"></div>
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div ng-switch="!!devices ? devices.length : 0">
+                                <h1>
+                                    <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                    <div ng-switch-default><a href="" ui-sref="^.connector.devices.all">{{devices.length + channels.length}}</a>
+                                    </div>
+                                </h1>
                             </div>
                         </div>
                     </div>
-                </a>
-            </div>
-        </div>
+                </div>
+                <div class="col-sm-4 dashboard-panel">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Message Types</h3>
+                    </div>
+                    <div class="panel panel-default">
+                        <a href="" ui-sref="^.analyzer">
+                            <div class="panel-body">
+                                <div ng-switch="!!messages ? 1 : 0">
+                                    <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                    <div ng-switch-default>
+                                        <div nvd3-pie-chart data="messages.types" height="300"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
 
-        <div class="col-sm-4 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Total Messages (30 days)</h3>
+                <div class="col-sm-4 dashboard-panel">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Total Messages (30 days)</h3>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div ng-switch="!!messages ? 1 : 0">
+                                <h1>
+                                    <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
+                                    <div ng-switch-default><a href="" ui-sref="^.analyzer">{{messages.total}}</a></div>
+                                </h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div ng-switch="!!messages ? 1 : 0">
-                        <h1>
-                            <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                            <div ng-switch-default><a href="" ui-sref="^.analyzer">{{messages.total}}</a></div>
-                        </h1>
+            <div class="row">
+                <div class="col-sm-12 dashboard-panel">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Messages</h3>
+                    </div>
+                    <div class="panel panel-default">
+                        <a href="" ui-sref="^.analyzer">
+                            <div class="panel-body">
+                                <div ng-switch="!!messages ? 1 : 0">
+                                    <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                                    <div ng-switch-default>
+                                        <div nvd3-line-chart show-legend="false" axis-x-label="Day" axis-x-type="date"
+                                             axis-x-format="%-m/%-d" data="messages.times" height="300"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12 dashboard-panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">Messages</h3>
-            </div>
-            <div class="panel panel-default">
-                <a href="" ui-sref="^.analyzer">
-                    <div class="panel-body">
-                        <div ng-switch="!!messages ? 1 : 0">
-                            <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-                            <div ng-switch-default>
-                                <div nvd3-line-chart show-legend="false" axis-x-label="Day" axis-x-type="date"
-                                     axis-x-format="%-m/%-d" data="messages.times" height="300"></div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
+      </div>
+    </md-content>
+  </div>
 </div>
