--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -5,9 +5,11 @@
 
   <md-toolbar md-theme="octo-blue" class="flow-top-bar" layout="row" layout-phone="column" layout-tablet="column">
     <div flex layout="row" class="md-toolbar-tools">
-      <a href class="menu-icon" ng-click="toggleNav()">
-        <i class="fa fa-bars"></i>
-      </a>
+      <h2 class="page-heading">
+        <a href class="menu-icon" ng-click="toggleNav()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </h2>
 
       <flow-editor-omnibox flex omni-search="omniSearch" flow-nodes="activeFlow.nodes" selected-flow-node="activeFlow.selectedFlowNode" ></flow-editor-omnibox>
     </div>
