--- a/public/pages/node_forms/http_request_body_form.html
+++ b/public/pages/node_forms/http_request_body_form.html
@@ -7,10 +7,23 @@
   <input  id="url" class="form-control" ng-model="flowNode.url" placeholder="http://example.com" type="url" required>
 </div>
 <div class="form-group">
-  <label for="url">Content-Type</label>
-  <input  id="url" class="form-control" ng-model="flowNode.contentType" required>
+    <label for="value">Value</label>
+    <input id="value" class="form-control" ng-model="flowNode.value">
 </div>
-<div class="form-group">
-    <label for="bodyKey">Key</label>
-    <input id="bodyKey" class="form-control" ng-model="flowNode.bodyKey">
-</div>
+
+<h3>Headers</h3>
+<md-list>
+  <md-item ng-repeat="key in flowNode.headerKeys track by $index">
+    <md-item-content>
+      <div class="md-tile-content" layout="row" layout-align="space-between" style="padding: 5px 0 0 0;">
+        <div style="margin: auto 10px auto 0; font-weight: bold; font-size: 1.5em">{{$index + 1}}.</div>
+        <md-text-float required label="Header" ng-model="flowNode.headerKeys[$index]"> </md-text-float>
+        <md-text-float required label="Value" ng-model="flowNode.headerValues[$index]"> </md-text-float>
+        <md-button class="md-fab" ng-click="flowNode.headerKeys.splice($index, 1);flowNode.headerValues.splice($index, 1)">
+            <i class="fa fa-minus"></i>
+        </md-button>
+      </div>
+    </md-item-content>
+  </md-item>
+</md-list>
+<md-button ng-click="flowNode.headerKeys.push('')" class="md-primary">Add Header</md-button>
